# 3dcpp

./: CMakeLists.txt  README.md  main.cpp
_proof-of-concepts/: ViewPortTest.cpp
components/: Ray.cpp  Ray.h  Vector3D.cpp  Vector3D.h
environment/: Scene.cpp  Scene.h
environment/resources/: Shape.h
render_engine/: RasterOptions.cpp  RasterOptions.h  Renderer.cpp  ViewPort.cpp  ViewPort.h
render_engine/headers/: Renderer.h  ViewPort.h
